<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">melonDualDS</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="preview">Preview</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="ellipsis">…</string>
    <string name="navigate_back">Back</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="version_nightly">Nightly</string>
    <string name="console_ds">DS</string>
    <string name="console_dsi">DSi (Experimental)</string>
    <string name="console_ds_full">Nintendo DS</string>
    <string name="console_dsi_full">Nintendo DSi</string>
    <string name="size_bytes">B</string>
    <string name="size_kb">KB</string>
    <string name="size_mb">MB</string>
    <string name="size_gb">GB</string>
    <string name="error_rom_not_found">Could not find ROM</string>
    <string name="error_rom_not_found_info">The ROM you have selected has not been found. Make sure the selected ROM can be found in the current ROM search directory.\n%1$s</string>
    <string name="error_load_rom">Could not load ROM</string>
    <string name="error_load_rom_message">There was a problem loading the ROM. Make sure it\'s not corrupted and try again.</string>
    <string name="error_load_firmware">Could not load the firmware</string>
    <string name="error_load_firmware_message">There was a problem loading the firmware (%1$s). Make sure the BIOS and firmware dump is not corrupted, that the firmware is bootable and try again.</string>
    <string name="error_load_rom_report_issue">An error log was generated that can help fix this problem. Do you want to open an issue on GitHub with this log? You will need a GitHub account.</string>
    <string name="title_emulator_running">Emulator running</string>
    <string name="message_stop_emulation">Stop emulation and load new ROM?</string>
    <string name="error_load_gba_rom">Could not load GBA ROM</string>
    <string name="renderer_unsupported_title">Renderer not supported</string>
    <string name="renderer_unsupported_message">%1$s renderer is not available on this device/build. Change Video renderer in Settings.</string>
    <string name="renderer_init_failed_title">Renderer initialization failed</string>
    <string name="renderer_init_failed_message">%1$s renderer could not be initialized. Change Video renderer in Settings.</string>
    <string name="action_search_roms">Search ROMs</string>
    <string name="action_sort_roms">Sort ROMs</string>
    <string name="action_boot_firmware">Boot firmware</string>
    <string name="action_refresh_rom_list">Refresh ROM list</string>
    <string name="hint_search_roms">Search ROMs…</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="nightly_update_available">Nightly update available</string>
    <string name="nightly_update_available_message">Do you want to download it now?</string>
    <string name="skip_update">Skip</string>
    <string name="remind_later_update">Later</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="starting_download">Starting download…</string>
    <string name="download_progress_sizes">%1$.1fMB/%2$.1fMB</string>
    <string name="update_download_failed">Failed to download update</string>
    <string name="dsiware_manager">DSiWare Manager</string>
    <string name="no_dsiware_titles_installed">You don\'t have any DSiWare title installed</string>
    <string name="dsiware_manager_no_dsi_setup">You haven\'t setup the DSi system</string>
    <string name="dsiware_manager_invalid_dsi_setup">Your DSi system setup is invalid</string>
    <string name="import_dsiware_title">Import DSiWare title</string>
    <string name="dsiware_manager_setup">Setup</string>
    <string name="dsiware_manager_fix_setup">Fix setup</string>
    <string name="dsiware_manager_load_error">There was a problem listing your DSiWare titles. Please check your DSi setup</string>
    <string name="dsiware_manager_import_title_error_open_nand_failed">The NAND could not be opened</string>
    <string name="dsiware_manager_import_title_error_open_file_failed">Error opening selected file</string>
    <string name="dsiware_manager_import_title_error_not_dsiware_title">Not a DSiWare title</string>
    <string name="dsiware_manager_import_title_error_title_already_imported">DSiWare title already imported</string>
    <string name="dsiware_manager_import_title_error_title_limit_reached">The DSi Menu already has 39 launcher entries. Delete another title before installing this one.</string>
    <string name="dsiware_manager_import_title_error_dsi_memory_full">The DSi system memory is full. Delete another DSiWare title before installing this one.</string>
    <string name="dsiware_manager_import_title_error_insatll_failed">Failed to install title</string>
    <string name="dsiware_manager_import_title_error_metadat_fetch_failed">Failed to download title metadata. Check your internet connection</string>
    <string name="dsiware_manager_import_title_error_unknown">An unknown error occurred</string>
    <string name="dsiware_manager_import_data">Import data…</string>
    <string name="dsiware_manager_export_data">Export data…</string>
    <string name="dsiware_manager_import_file_success">%1$s imported successfully</string>
    <string name="dsiware_manager_import_file_error">Failed to import file</string>
    <string name="dsiware_manager_export_file_success">%1$s exported successfully</string>
    <string name="dsiware_manager_export_file_error">Failed to export file</string>
    <string name="dsiware_import_from_file">From file</string>
    <string name="dsiware_import_from_rom_list">From ROM list</string>
    <string name="select_dsiware_title">Select DSiWare title</string>
    <string name="no_dsiware_roms_found">No DSiWare ROMs found</string>
    <string name="info_fps">FPS: %1$d</string>
    <string name="info_play_time_hours_minutes">Play time: %1$dh %2$dm</string>
    <string name="info_play_time_minutes">Play time: %1$dm</string>
    <string name="info_loading">LOADING…</string>
    <string name="info_refreshing_retroachievements_title">Refreshing RetroAchievements…</string>
    <string name="info_refreshing_retroachievements_detail">Fetching the latest achievement set</string>
    <string name="info_vulkan_compiling_title">Building Vulkan shaders…</string>
    <string name="info_retroarch_compiling_title">Building RetroArch shaders…</string>
    <string name="info_vulkan_compiling_progress">%1$s (%2$d/%3$d)</string>
    <string name="info_vulkan_compiling_stage_init">Initializing Vulkan renderer</string>
    <string name="info_vulkan_compiling_stage_pipelines">Building Vulkan pipelines</string>
    <string name="info_vulkan_compiling_stage_output">Initializing Vulkan output</string>
    <string name="info_vulkan_compiling_stage_warmup">Warming up first frame</string>
    <string name="info_vulkan_compiling_stage_retroarch">Preparing RetroArch shader</string>
    <string name="save_state_slot">%1$s.</string>
    <string name="failed_save_state">Failed to save state</string>
    <string name="failed_load_state">Failed to load state</string>
    <string name="invalid_auto_load_state">Auto-load state is invalid and was skipped</string>
    <string name="cant_load_empty_slot">Can\'t load an empty save state slot</string>
    <string name="failed_reset_emulation">Failed to reset emulation</string>
    <string name="save_states_not_supported">Save states are not supported while running the firmware</string>
    <string name="load_states_unavailable_ra_hardcore_enabled">Loading save states is unavailable while Hardcore mode is enabled</string>
    <string name="rewind_time_seconds">%1$ss</string>
    <string name="rewind_time_minutes_seconds">%1$dm%2$ss</string>
    <string name="rewind_not_enabled">Rewind is not enabled</string>
    <string name="rewind_unavailable_ra_hardcore_enabled">Rewind is unavailable while Hardcore mode is enabled</string>
    <string name="cheats_unavailable_ra_hardcore_enabled">Cheats are unavailable while Hardcore mode is enabled</string>
    <string name="no_image_selected">No image selected</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="internal_firmware_settings">Internal firmware settings</string>
    <string name="internal_firmware_settings_summary">Adjust the settings of the internal firmware.</string>
    <string name="custom_bios_firmware">Custom BIOS and firmware</string>
    <string name="enable_jit">Enable JIT</string>
    <string name="enable_jit_summary">Improves performance but may cause freezes or crashes.</string>
    <string name="save_internal_config_as_file">Save internal config as a file</string>
    <string name="save_internal_config_as_file_summary">Keeps melonDualDS.opts synchronized in the save-file directory, or in a ROM directory when no save-file directory is configured.</string>
    <string name="system_app_log_file_enabled">Write app log to ROM folder</string>
    <string name="system_app_log_file_enabled_summary">Creates melonDualLog.log in the first ROM folder and records app, native, and core logcat lines for debugging. Enable only while reproducing an issue.</string>
    <string name="system_dldi_sd_card_enabled">Enable DLDI / Homebrew SD</string>
    <string name="system_dldi_sd_card_enabled_summary">Mounts a virtual SD card for DLDI homebrew. Needed by apps like ZXDS.</string>
    <string name="system_dldi_sd_card_dir">DLDI SD folder</string>
    <string name="system_dldi_sd_card_image_size">DLDI SD image size</string>
    <string name="system_disable_touch_gestures_on_touch_screen_area">Disable touch gestures on touch screen area</string>
    <string name="system_disable_touch_gestures_on_touch_screen_area_summary">Prevents Android system gestures from triggering over the DS touch screen while playing. Leave off if you use the back gesture to open the in-game menu.</string>
    <string name="system_ignore_display_cutout_in_layouts">Ignore display cutout in layouts</string>
    <string name="system_ignore_display_cutout_in_layouts_summary">Lets emulator layouts use the notch or camera cutout area. Restart the layout editor or emulator after changing this.</string>
    <string name="backup_internal_layout">Backup internal layout</string>
    <string name="backup_external_layout">Backup layout</string>
    <string name="restore_internal_layout">Restore internal layout</string>
    <string name="restore_external_layout">Restore layout</string>
    <string name="save_next_rom">Save next to ROM file</string>
    <string name="save_file_directory">Save file directory</string>
    <string name="save_file_use_srm_extension">Use .srm save extension</string>
    <string name="save_file_use_srm_extension_summary">Saves game save files as .srm instead of .sav</string>
    <string name="save_state_location">Save state location</string>
    <string name="auto_save_state_on_exit">Auto save state on exit</string>
    <string name="auto_save_state_on_exit_summary">Automatically saves quick slot when exiting a ROM</string>
    <string name="auto_load_state_on_launch">Auto load state on launch</string>
    <string name="auto_load_state_on_launch_summary">Automatically loads quick slot when launching a ROM</string>
</resources>